Fixed missing padding:0

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 *::after {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 h1.title {
@@ -13,6 +14,7 @@ h1.title {
 h2 {
     font-size: 32px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 p {
